[package]
name = "truce-gui"
version = "3.1.4"
repository = "https://github.com/truce-audio/truce"
homepage = "https://github.com/truce-audio/truce"
edition = "2024"
license = "LicenseRef-TruceLicense-1.0"
rust-version = "1.92"
description = "Built-in GUI for truce plugins"

[dependencies]
truce-core = { version = "3.1.4" }
# `truce-cpu` (tiny-skia + skrifa) and `truce-gpu` (wgpu) are the
# two `RenderBackend` impls. Both optional, gated by the `cpu`
# (default) / `gpu` features so plugins that opt into one don't
# pull the other's compile.
truce-cpu = { version = "3.1.4", optional = true }
# Git dep, not a plain crates-io version - the root
# `[patch."https://github.com/truce-audio/truce"]` table only redirects
# deps sourced FROM that git URL to truce-local/truce-gpu (the vendor
# with the DX12|GL fallback fix). A plain version string here resolved
# from crates.io instead, silently bypassing the patch - the fallback
# fix was dead code in every build reaching truce-gpu through here.
truce-gpu = { git = "https://github.com/truce-audio/truce", tag = "v3.1.4", optional = true }
truce-gui-types = { version = "3.1.4" }
truce-gui-utils = { version = "3.1.4" }
truce-params = { version = "3.1.4" }
truce-plugin = { version = "3.1.4" }
raw-window-handle = "0.5"
wgpu = { version = "29", default-features = false, features = ["wgsl"] }
pollster = "0.4"
log = "0.4"

# baseview hosts the editor on macOS / Windows / Linux. iOS embeds
# a UIView directly into the AUv3 view controller - no baseview.
[target.'cfg(not(target_os = "ios"))'.dependencies]
baseview = { package = "baseview-truce", version = "0.1.1-truce.12" }

# wgpu backend features, per OS. truce-gui's blit pipeline (cpu
# mode) and `GpuEditor` (gpu mode) both need a usable wgpu backend
# regardless of which feature is on. truce-gpu used to provide
# these transitively; now that truce-gpu is optional, truce-gui
# declares them itself so wgpu always has a backend available.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
wgpu = { version = "29", default-features = false, features = ["wgsl", "metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
# gles = GL fallback for adapters with no DX12 (old GPUs/drivers) - see
# `editor_wgpu_backends()` in `platform.rs`, which is the runtime piece
# that actually enables the fallback (compiling the feature alone doesn't).
wgpu = { version = "29", default-features = false, features = ["wgsl", "dx12", "gles"] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "29", default-features = false, features = ["wgsl", "vulkan", "gles"] }

# iOS UIKit + CoreGraphics bridging for the UIView host.
[target.'cfg(target_os = "ios")'.dependencies]
# iOS always rasterizes with the CPU backend (tiny-skia → CGImage →
# UIView layer contents); the `gpu` wgpu path is desktop-only. So
# truce-cpu is a hard dependency here regardless of the `cpu` / `gpu`
# features a plugin picks — a gpu-only iOS build (e.g. an example that
# sets `features = ["gpu"]`) still needs the CPU rasterizer.
truce-cpu = { version = "3.1.4" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }
objc2-ui-kit = { version = "0.3", features = ["UIView", "UIScreen", "UIWindow"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CAMetalLayer"] }

[features]
default = ["cpu"]
cpu = ["dep:truce-cpu", "dep:truce-gpu"]
gpu = ["dep:truce-gpu"]
